--- a/src/css/estiloChat.css
+++ b/src/css/estiloChat.css
@@ -1,55 +1,46 @@
 /*
 *
 */
-.rcw-message {
+#WaibocWidgetMain .rcw-message {
   font-size: 17px !important ;
 }
-/*   */
-.testtt:hover {
-    animation-duration: 3s;
-    animation-name: slidein;
-  }
-  @keyframes slidein {
-    from {
-      margin-left: 100%;
-      width: 300% ;
-    }
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
+#WaibocWidgetMain .rcw-send {
+  background: #f4f7f9 !important ;
+  border: 0 !important ;
+}
+#WaibocWidgetMain .rcw-send .rcw-send-icon {
+  height: 25px !important ;
+}
 /*    */
-.rcw-widget-container {
+#WaibocWidgetMain .rcw-widget-container {
     z-index: 9999 !important ;
     max-width: 450px !important ;
 }
-.rcw-open-launcher:hover {
+#WaibocWidgetMain .rcw-open-launcher:hover {
   cursor: pointer !important ;
 }
 /*  */
 @media (max-width: 375px) {
-  .rcw-widget-container {
+  #WaibocWidgetMain .rcw-widget-container {
     max-width: 375px !important ;
   }
 }
 /*  */
-.ant-carousel .slick-slide {
+#WaibocWidgetMain .ant-carousel .slick-slide {
   text-align: center !important ;
   height: 160px !important ;
   line-height: 160px !important ;
   background: #364d79 !important ;
   overflow: hidden !important ;
 }
-
-.ant-carousel .slick-slide h3 {
+#WaibocWidgetMain .ant-carousel .slick-slide h3 {
   color: #fff !important ;
 }
 /*  */
-.waiboc-msg-carousel {
+#WaibocWidgetMain .waiboc-msg-carousel {
   width: 380px ;
 }
-.waiboc-msg-carousel .waiboc-arrow {
+#WaibocWidgetMain .waiboc-msg-carousel .waiboc-arrow {
   z-index: 9999 ;
   font-size: 30px ;
   position: relative ;
@@ -57,21 +48,21 @@
   opacity: 0.5 ;
   top: 90px !important ;
 }
-.waiboc-msg-carousel .waiboc-arrow:hover {
+#WaibocWidgetMain .waiboc-msg-carousel .waiboc-arrow:hover {
   opacity: 1 !important ;
 }
-.waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-left {
+#WaibocWidgetMain .waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-left {
   left: 10px  !important ;
 }
-.waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-right {
+#WaibocWidgetMain .waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-right {
   right: -310px !important ;
 }
 /*  */
 @media (max-width: 375px) {
-  .waiboc-msg-carousel {
+  #WaibocWidgetMain .waiboc-msg-carousel {
     width: 330px ;
   }
-  .waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-right {
+  #WaibocWidgetMain .waiboc-msg-carousel i.waiboc-arrow.waiboc-arrow-right {
     right: -260px !important ;
   }
 }
